--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup Cache
         uses: actions/cache@v3
         with:
-          path: ${{ env.CACHE_PATH }}-${{ matrix.node-version }}
+          path: ${{ env.CACHE_PATH }}
           key: ${{ env.CACHE_KEY }}-${{ matrix.node-version }}
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -66,7 +66,7 @@ jobs:
         with:
           route: DELETE /repos/{repository}/actions/caches?key={cache_key}
           repository: ${{ github.repository }}
-          cache_key: ${{ env.SRC_CACHE_KEY }}-${{ matrix.node-version }}
+          cache_key: ${{ env.CACHE_KEY }}-${{ matrix.node-version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Check Lint Status
@@ -95,8 +95,8 @@ jobs:
       - name: Load Cache
         uses: actions/cache@v3
         with:
-          path: ${{ env.SRC_CACHE_PATH }}-${{ matrix.node-version }}
-          key: ${{ env.SRC_CACHE_KEY }}-${{ matrix.node-version }}
+          path: ${{ env.CACHE_PATH }}
+          key: ${{ env.CACHE_KEY }}-${{ matrix.node-version }}
       - name: Run ESLint
         run: yarn lint:ci
         continue-on-error: true
